MYZ-6871 fixed z-index on sticky

--- a/web-components-library/src/components/z-header/styles.css
+++ b/web-components-library/src/components/z-header/styles.css
@@ -144,6 +144,7 @@ header {
   grid-area: dropdown-menu;
   grid-column-gap: 8px;
   background: rgb(230, 230, 230);
+  z-index: 1;
 }
 
 .mobile-dropdown {
@@ -192,6 +193,7 @@ header {
   position: fixed;
   top: 52px;
   width: 100%;
+  z-index: 999;
 }
 
 /* Tablet breakpoint */
